--- a/main/templates/info_center.html
+++ b/main/templates/info_center.html
@@ -148,5 +148,6 @@
         </div>
     </div>
   <script src="{% static 'js/info_center.js' %}"></script>
+  <script src="{% static 'js/viewport.js' %}"></script>
 </main>
 {% endblock %}
