--- a/main/static/css/card.css
+++ b/main/static/css/card.css
@@ -1,22 +1,26 @@
 .news-events-updates {
-    background: url('../img/bg.png') no-repeat center center/cover;
-    height: 1000px;
-    background-color: #111;
+    height: auto;
+    background-color: transparent;
     color: antiquewhite;
+    margin-top: -100px;
+    padding-bottom: 200px;
   }
   
   .news-container, .events-container, .updates-container {
     display: flex;
     flex-wrap: wrap;
     gap: 50px;
-    margin-left: 265px;
-    margin-top: 50px;
+    margin-left: 250px;
+    margin-right: 2%;
     z-index: 11;
   }
   
   .news-card, .event-card, .update-card {
-    width: 430px;
-    min-height: 475px;
+    width: 100%; /* По умолчанию занимает всю ширину родителя */
+    max-width: 430px; /* Ограничение по максимальной ширине */
+    flex: 1 1 calc(33.333% - 2%); /* Карточки занимают треть доступного пространства */
+    min-height: auto;
+    max-height: 600px;
     border-radius: 20px;
     display: flex;
     flex-direction: column;
@@ -26,23 +30,24 @@
     margin: 0;
   }
 
- /* Обновление стилей для всех карточек */
-  .news-image img, .event-image img, .update-image img {
-    width: 100%;
-    height: 270px;
-    object-fit: cover;
-    display: block;
-    cursor: pointer;
-  }
-  
-  .news-content, .event-content, .update-content {
-    flex-grow: 1;
-    padding: 20px 30px;
-    display: flex;
-    flex-direction: column;
-    background-color: #0000004f;
-    justify-content: space-between;
-  }
+.news-image img, .event-image img, .update-image img {
+  width: 100%;
+  max-height: 270px;
+  height: auto; /* Сохраняет пропорции изображения */
+  object-fit: cover;
+  display: block;
+  cursor: pointer;
+}
+
+/* Контент карточек */
+.news-content, .event-content, .update-content {
+  flex-grow: 1;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  background-color: #0000004f;
+  justify-content: space-between;
+}
   
   .news-date, .event-date, .update-date {
     font-family: 'Chakra Petch', sans-serif;
@@ -119,3 +124,88 @@
   }
   
   
+  @media (max-width: 1000px) {
+
+    .news-container, .events-container, .updates-container {
+      margin-left: 100px;
+      margin-top: 50px;
+    }
+
+}
+
+@media (max-width: 750px) {
+
+  .news-card, .event-card, .update-card {
+    flex: 1 1 calc(50% - 2%); /* 50% ширины */
+  }
+
+  .news-container, .events-container, .updates-container {
+    margin-left: 75px;
+    margin-top: 50px;
+  }
+
+}
+
+@media (max-width: 520px) {
+
+  .news-events-updates {
+    height: auto;
+    background-color: transparent;
+    color: antiquewhite;
+    margin-top: -175px;
+  }
+  
+
+  .news-card, .event-card, .update-card {
+    flex: 1 1 calc(100% - 2%); /* 100% ширины */
+  }
+  .news-content, .event-content, .update-content {
+    padding: 10px; /* Уменьшение отступов */
+  }
+
+  .news-container, .events-container, .updates-container {
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 50px;
+  }
+
+  .news-date, .event-date, .update-date {
+    font-family: 'Chakra Petch', sans-serif;
+    font-size: 14px;
+    font-weight: 600;
+    color: #7d7d7d;
+    line-height: 24px;
+    margin: 0 0 10px 0;
+  }
+  
+  .news-title, .event-title, .update-title {
+    font-family: 'Chakra Petch', sans-serif;
+    font-size: 22px;
+    font-weight: bold;
+    line-height: 28px;
+    margin: 0 0 10px 0;
+  }
+
+  .news-image img, .event-image img, .update-image img {
+    max-height: 200px;
+  }
+
+  .news-button.open, .event-button.open, .update-button.open {
+    width: 70px;
+    height: 30px;
+    background-color: #5ef6ff;
+    font-size: 18px;
+    font-weight: 600;
+  }
+
+  .news-button.small, .event-button.small, .update-button.small {
+    width: 30px;
+    height: 30px;
+  }
+  
+  .news-button.small img , .event-button.small img , .update-button.small img {
+    width: 15px; /* Устанавливаем размер иконки */
+    height: 15px;
+  }
+
+}
