--- a/main/static/css/info_center.css
+++ b/main/static/css/info_center.css
@@ -1,5 +1,5 @@
 body, html {
-    background: url(/static/img/herosection.png) no-repeat center center/cover;
+    background: url(/static/img/bg.png) no-repeat center center/cover;
     margin: 0;
     padding: 0;
     height: 100vh; /* Высота экрана */
@@ -17,12 +17,19 @@ body, html {
     color: #FF4E47;
 }
 
+body {
+    position: relative; /* Родительский контейнер для позиционирования */
+}
+
 .main-container {
+    position: relative;
     border-bottom: 1px solid rgb(39, 39, 39);
-    height: 677px;
+    height: 800px;
     display: flex;
+    top: -150px;
     flex-direction: column;
     justify-content: flex-end; /* Выравнивание по низу */
+    background: url(/static/img/herosection.png) no-repeat center center/cover;
 }
 
 .info {
@@ -94,8 +101,12 @@ body, html {
 /* кнопки news, updates, events */
   
 .menu {
-    margin: 0px 250px 0;
+    margin-left: 250px;
     margin-top: 90px;
+    display: flex; /* Flexbox для выравнивания кнопок */
+    flex-wrap: nowrap; /* Запрет переноса строк */
+    overflow-x: auto; /* Добавляем горизонтальную прокрутку */
+    gap: 20px; /* Расстояние между кнопками */
 }
 
 .menu .menu-button {
@@ -110,7 +121,6 @@ body, html {
     text-align: center;
     cursor: pointer;
     transition: background-color 0.3s, color 0.3s;
-    margin-right: 20px;
 }
 
 
@@ -131,4 +141,105 @@ p{
   margin: 0;
 }
   
+
+@media (max-width: 1190px) {
+
+
+    .info {
+        margin: 0px 100px 0;
+    }
+
+    .menu {
+        margin: 0px 100px 0;
+        margin-top: 90px;
+    }
+
+}
+
+@media (max-width: 750px) {
+
+
+    .info {
+        margin: 0px 75px 0;
+    }
+
+    .menu {
+        margin: 0px 75px 0;
+        margin-top: 90px;
+        gap: 10px;
+    }
+    
+    .main-text p {
+        font-size: 56px;
+        line-height: 56px;
+    }
+
+    .menu .menu-button {
+        width: 200px;
+        height: 60px;
+        font-size: 16px;
+        font-weight: 500;
+        letter-spacing: 2%;
+    }
+}
+
+@media (max-width: 520px) {
+
+    .main-container {
+        height: 550px;
+    }
+
+    .info {
+        margin: 0px 25px 0;
+    }
+
+    .menu {
+        margin: 0px 25px 0;
+        margin-top: 50px;
+    }
+
+    .menu .menu-button {
+        width: 200px;
+        height: 45px;
+        font-size: 13px;
+        font-weight: 500;
+        letter-spacing: 2%;
+    }
+
+    .main-content {
+        margin-bottom: 0px; /* Отступ снизу */
+    }
+
+    .main-content p {
+        font-size: 7px;
+        border: solid 1px #5EF5FF;
+        border-radius: 2px;
+        height: 14px;
+        width: 72px;
+    }
+
+    .main-text p {
+        font-size: 36px;
+        line-height: 36px;
+        margin-bottom: 15px;
+    }
+
+    .sub-title {
+        font-size: 13px;
+    }
+
+    .readmore a {
+        text-decoration: none; /* Убираем подчеркивание у ссылки */
+        font-size: 13px;
+        line-height: 24px; /* Совпадает с высотой иконки */
+    }
+
+    .right-arrow-icon {
+        width: 18px;
+        height: 18px;
+    }
+    
+
+}
+
 
