--- a/main/templates/profile.html
+++ b/main/templates/profile.html
@@ -12,21 +12,18 @@
 
 {% block body %}
 <main>
-  <!-- Левая стрелка -->
-  <button class="arrow left-arrow">
-    <img src="{% static 'img/button-left.png' %}" alt="Left Arrow">
-  </button>
 
-  <!-- Блок 1 -->
-  <div class="page-container block active">
+  <div class="main-container">
+  <!-- Блок QUESTS -->
+  <div class="page-container block active quests">
     <div class="profile-content">
       <div class="phone-img">
         <img src="{% static 'img/BlockPhonewithmap.png' %}" alt="Phone displaying map">
       </div>
       <div class="main-content">
-        <h2>QUESTS</h2>
-        <h1>Quests around the world!</h1>
-        <p>Lorem Ipsum has been the industry's<br>standard dummy text since the 1500s,<br>when an unknown printer took a galley of<br>type and scrambled it to make a type ...</p>
+        <h2 class="yellow">QUESTS</h2>
+        <h1 class="yellow">Quests around the world!</h1>
+        <p>Lorem Ipsum has been the industry's standard dummy text since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type ...</p>
         <div class="hashtags">
           <p>Physical activity</p>
           <p>Worldwide</p>
@@ -36,8 +33,8 @@
     </div>
   </div>
 
-  <!-- Блок 2 -->
-  <div class="page-container block">
+  <!-- Блок FRIENDS -->
+  <div class="page-container block friends">
     <div class="profile-content">
       <div class="phone-img">
         <img src="{% static 'img/blockplaywithfriends.png' %}" alt="People playing together">
@@ -45,7 +42,7 @@
       <div class="main-content">
         <h2 class="green">FRIENDS</h2>
         <h1 class="green">Meet with friends and play together!</h1>
-        <p>Discover the secrets and hidden places<br>you never knew existed. Join others in<br>exciting quests for unforgettable experiences...</p>
+        <p>Discover the secrets and hidden places you never knew existed. Join others in exciting quests for unforgettable experiences...</p>
         <div class="hashtags">
           <p>Adventure</p>
           <p>Teamwork</p>
@@ -54,11 +51,18 @@
       </div>
     </div>
   </div>
+</div>
 
   <!-- Правая стрелка -->
-  <button class="arrow right-arrow">
-    <img src="{% static 'img/button-right.png' %}" alt="Right Arrow">
-  </button>
+  <div class="arrow-container">
+    <button class="arrow left-arrow">
+      <img src="{% static 'img/button-left.png' %}" alt="Left Arrow">
+    </button>
+    <button class="arrow right-arrow">
+      <img src="{% static 'img/button-right.png' %}" alt="Right Arrow">
+    </button>
+  </div>
+
 </main>
 
 <script src="{% static 'js/profile.js' %}"></script>
