--- a/main/static/css/header.css
+++ b/main/static/css/header.css
@@ -150,14 +150,20 @@
 
 #content-block {
     position: fixed;
-    width: 950px;
-    height: 850px;
-    max-width: 90%; /* Адаптивность для маленьких экранов */
+    width: 80%; /* Уменьшаем ширину на мобильных */
+    max-width: 950px;
+    height: auto; /* Делаем высоту адаптивной */
     background-color: rgb(0, 0, 0); /* Фон */
     z-index: 2;
-    border: 1px solid #2F2F2F; /* Рамка толщиной 1px с нужным цветом */
-    box-sizing: border-box; /* Учет рамки в размерах блока */
+    border: 1px solid #2F2F2F;
+    box-sizing: border-box;
     border-radius: 10px;
+    padding: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    overflow-y: auto; /* Прокрутка для длинного содержимого */
 }
 
 
@@ -171,20 +177,21 @@
     border: none;
     cursor: pointer;
     padding: 0;
+    z-index: 3;
 }
 
 #block {
-    width: 790px;
-    height: 693px;
-    margin: 78px;
+    width: 100%; 
+    max-width: 750px; 
+    text-align: center;
 }
 
 #main-text {
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 
 #main-text p{
-    font-size: 98px;
+    font-size: 98px; 
     font-weight: 800;
     font-style: italic;
     color: transparent;
@@ -194,42 +201,43 @@
     padding: 0;
 }
 
-#socials {
-    width: 790px;
-    height: 370px;
-    display: flex;
-    justify-content: space-between; /* Распределение элементов */
-    gap: 5px; /* Расстояние между элементами */
-}
 
 /* SOCIAL ICONS */
 
 #socials {
     display: flex;
-    gap: 10px;
+    width: 100%;
+    max-width: 100%; 
+    justify-content: center; 
+    gap: 5px; 
 }
 
 .social-item {
-    display: inline-block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     position: relative;
+    width: fit-content; 
+    height: auto;
+    aspect-ratio: 1 / 1; 
+    overflow: hidden; 
+    transition: height 0.3s ease; 
 }
 
 .social-img {
-    display: block;
-    width: 100%;
-    height: auto;
-    position: absolute;
+    width: 100%; 
+    height: 100%; 
+    object-fit: contain; 
+    position: absolute; 
     top: 0;
     left: 0;
-    transition: opacity 300ms ease-out;
+    transition: opacity 0.3s ease;
 }
 
-/* Initially, hide the hover image */
 .social-item .hover {
     opacity: 0;
 }
 
-/* On hover, hide the normal image and show the hover image */
 .social-item:hover .normal {
     opacity: 0;
 }
@@ -241,13 +249,13 @@
 
 #socials a{
     width: 150px;
-    height: 350px;
+    height: auto;
 }
 
 #socials a img {
-    width: 100%; /* Занимает всю ширину ссылки */
-    height: 100%; /* Занимает всю высоту ссылки */
-    object-fit: cover; /* Сохраняет пропорции изображения */
+    width: 100%; 
+    height: auto; 
+    object-fit: contain;
 }
 
 #contact {
@@ -287,14 +295,76 @@
     cursor: pointer;
 }
 
+@media (max-width: 1400px) {
 
-@media (max-width: 1190px) {
+    .header {
+        padding: 0px 150px; 
+    }
+    
+}
+
+
+@media (max-width: 1200px) {
 
     .header {
         padding: 0px 100px; 
     }
+
+    #main-text p {
+        font-size: 50px; /* Адаптивный размер текста */
+        -webkit-text-stroke: 1px var(--primary-color);
+    }
     
+    .social-img{
+        top: unset;
+        border-radius: 5px;
+    }
 }
+
+
+@media (max-width: 760px) {
+
+    .header{
+        padding: 0px 50px;
+    }
+
+    .header .logo img {
+        max-height: 60px; /* Размер логотипа */
+    }
+
+    .our-socials-btn {
+        width: 150px;
+        height: 40px;
+        font-size: 18px;
+    }
+
+    .language-switch {
+        gap: 4px;
+        font-size: 16px; 
+    }
+
+    .language-switch .icon,
+    .language-switch .arrow-icon {
+        width: 28px;
+        height: 28px;
+    }
+
+    .language-menu {
+        width: 100px;
+    }
+
+    .language-menu li {
+        padding: 6px;
+        font-size: 8px;
+    }
+
+    /* Контейнер для правых элементов */
+    .header-right {
+        gap: 15px; /* Расстояние между кнопкой и переключателем языка */
+    }
+
+}
+
 
 @media (max-width: 520px) {
 
