--- a/main/templates/template.html
+++ b/main/templates/template.html
@@ -45,48 +45,39 @@
           <div id="overlay" style="display: none;">
             <div id="content-block">
                 <button type="button" id="close-block"><img src="/static/img/icon-close.png" alt="Close" /></button>
-                
                 <div id="block">
                     <div id="main-text">
                         <p>Our Socials</p>
                     </div>
-                    
                     <div id="socials">
                         <a href="/map" class="social-item" target="_blank">
-                            <img class="social-img normal" src="/static/img/social-tt.png" alt="The Quest Tiktok">
-                            <img class="social-img hover" src="/static/img/social-tt-hover.png" alt="The Quest Tiktok Hover">
+                            <img class="social-img" src="/static/img/social-tt-hover.png" alt="The Quest Tiktok">
                         </a>
-                        
                         <a href="https://t.me/thequestgames" class="social-item" target="_blank">
-                            <img class="social-img normal" src="/static/img/social-tg.png" alt="The Quest Telegram">
-                            <img class="social-img hover" src="/static/img/social-tg-hover.png" alt="The Quest Telegram Hover">
+                            <img class="social-img" src="/static/img/social-tg-hover.png" alt="The Quest Telegram">
                         </a>
                         <a href="/map" class="social-item" target="_blank">
-                            <img class="social-img normal" src="/static/img/social-inst.png" alt="The Quest Instagram">
-                            <img class="social-img hover" src="/static/img/social-inst-hover.png" alt="The Quest Instagram Hover">
+                            <img class="social-img" src="/static/img/social-inst-hover.png" alt="The Quest Instagram">
                         </a>
                         <a href="/map" class="social-item" target="_blank">
-                            <img class="social-img normal" src="/static/img/social-ds.png" alt="The Quest Discord">
-                            <img class="social-img hover" src="/static/img/social-ds-hover.png" alt="The Quest Discord Hover">
+                            <img class="social-img" src="/static/img/social-ds-hover.png" alt="The Quest Discord">
                         </a>
                         <a href="/map" class="social-item" target="_blank">
-                            <img class="social-img normal" src="/static/img/social-x.png" alt="The Quest X">
-                            <img class="social-img hover" src="/static/img/social-x-hover.png" alt="The Quest X Hover">
+                            <img class="social-img" src="/static/img/social-x-hover.png" alt="The Quest X">
                         </a>
                     </div>
-            
                     <div id="contact">
                         <hr id="line">
                         <span id="text">CONTACT</span>
                         <hr id="line">
                     </div>
-
                     <div id="send-msg">
                         <button type="button" id="send-btn">Send Message</button>
                     </div>
                 </div>
             </div>
-          </div>
+        </div>
+        
       </div>
     </header>
   {% block body %}
